# All-Code-I-Have-Done

./: .gitignore  README.md  gitig.txt  新建文本文档.cpp  新建文本文档.txt
C Programming Book/: 0-N随机数产生K-L的随机数.cpp  16进制与10进制相互转换.cpp  520照片墙.py  BytesAligning.c  C Programming Book.vcxproj  C Programming Book.vcxproj.filters  C++11 计算程序时间.cpp  Hanoi.c  Josephus Problem.c  Magic Matric.c  Monkey eat pears.c  Multiply Table.c  Saddle Point in 2D array.c  Specific Letter Graphic.c  Spiral Matrix.c  StringSplit.cpp  argSort.cpp  argcSort.c  binarySearch.c  binarySearch.cpp  combination permutation powerset.cpp  delete Specific data in LinkedList.c  gcd.c  insert s1 s1 pos.c  integertoString.c  isIPAddressLegal.cpp  isPalindrome.c  isPrime.c  isPrime.cpp  memcpy(内存有重叠).cpp  python生成-520.py  sizeof.cpp  sqrt函数实现.cpp  static和const关键字.cpp  str Operation.c  string_to_int(atoi).cpp  students LinkedList info.c  studentsInfo.c  studentsRegisterTable.c  swap.c  (+34 more)
C++ 11/: Array new.cpp  C++ 11.vcxproj  C++ 11.vcxproj.filters  C++内存分布.cpp  C++获取当前时间.cpp  C++虚函数.cpp  MemoryPool.cpp  MemoryPool.h  Per-class allocator 1.cpp  Per-class allocator 2.cpp  StackAlloc.h  alias.cpp  defalloc.h  emplace与insert区别.cpp  function类使用.cpp  hashTable.cpp  initializer_list.cpp  lambda.cpp  memory.cpp  move-aware.cpp  newdelete expression.cpp  print.cpp  sample.cpp  static allocator.cpp  stl.algobase.h  stl_algo.h  stl_alloc.h  stl_config.h  stl_construct.h  stl_deque.h  stl_hash_map.h  stl_hash_set.h  stl_hashtable.h  stl_heap.h  stl_iterator.h  stl_list.h  stl_map.h  stl_multimap.h  stl_multiset.h  stl_pair.h  (+25 more)
DataStructure/: 0-1背包问题.cpp  Astar算法.cpp  Astar解决八数码问题.cpp  BFS解决八数码问题.cpp  B树.cpp  DataStructure.sln  DataStructure.vcxproj  DataStructure.vcxproj.filters  GAME OF DRONES AI BATTLE-GOD’S STRATEGY (2ND PLACE).cpp  Going from u to v or from v to u.cpp  IDAstar解决15数码问题.cpp  KD树.cpp  OpenCV源码-最大生成树.cpp  POJ1088滑雪问题.cpp  POJ1661_help_Jimmy.cpp  Wireless Network.cpp  drones.py  kdtree.cpp  kdtree_test1.cpp  kdtree_test2.cpp  scipy中KDTree例子.py  三大排序算法集锦.cpp  二叉树的各种遍历-递归非递归(以KD树为例).cpp  使用优先队列和STL解决迪杰斯特拉算法.cpp  使用优先队列实现Prim最小生成树算法.cpp  使用并查集和STL实现kruskal最小生成树算法.cpp  先序遍历中序遍历已知求后序遍历.cpp  单向链表的各类操作.cpp  双向循环链表.cpp  后序遍历中序遍历已知求先序遍历.cpp  哈弗曼编码.cpp  回文子序列个数.cpp  城堡问题.cpp  基数排序.cpp  寻路问题.cpp  希尔排序.cpp  并查集.cpp  广度优先搜索(BFS)-OpenCV.cpp  广度优先搜索BFS(有向图).cpp  广度优先搜索BFS.cpp  (+19 more)
Design Pattern/: Design Pattern.vcxproj
Image Processing/: CameraCalibrator.cpp  CameraCalibrator.h  Image Processing.vcxproj  Image Processing.vcxproj.filters  Opencv2.4.9源码分析——Stitching.docx  canny1.cpp  canny2.cpp  convert_tensor_ev.cpp  crackPreDetection.cpp  crackTreeOriginal.cpp  crack_detection.cpp  create_ball_tensorfield.cpp  create_stick_tensorfield.cpp  dt.h  find_feature.cpp  histpeaks.cpp  include.h  isolate.cpp  isolate1.cpp  main.cpp  myDesign.cpp  newDesign.cpp  node.cpp  python图片切图.py  python计算ssim.py  sift-OpenCV2410.cpp  sift.cpp  sift.h  siftmain.cpp  stitchingWKK.cpp  stitching_detailed-OpenCV 3.3.cpp  thres.cpp  【OpenCV】访问Mat中每个像素的值（新）.cpp  使用OpenCV分隔图片-range使用.cpp  另一个版本SIFTsift.cpp  另一个版本SIFTsift.h  各种滤波算法-中值滤波 均值滤波 高斯滤波等.cpp  图像平移.cpp  图像旋转一定角度.cpp  图像灰度标准差.cpp  (+3 more)
Image Processing/crack_merge/: .gitignore  CMakeLists.txt
Image Processing/crack_merge/inc/: crack_merge.h  longestPathByPoint.h  stitching_dll.h
Image Processing/crack_merge/lib/: getwidthdll.lib  stitchImgs.lib
Image Processing/crack_merge/src/utility/: ClosetPairFromTwoGroup.cpp  ClosetPairFromTwoGroup.h  crack_merge.cpp  fragmentation.cpp  getwidthDll.h  longestPathByPoint.cpp  longestPathByPoint.h
Image Processing/libpano13-2.9.19/tools/: CMakeLists.txt  Makefile.am  Makefile.in  PTAInterpolate.c  PTblender.c  PTcrop.c  PTinfo.c  PTmasker.c  PTmender.c  PTmender.h  PToptimizer.c  PTroller.c  PTtiff2psd.c  PTtiffdump.c  PTuncrop.c  panoinfo.c  panoinfo_unix.c
Image Processing/libpano13-2.9.19/tools/compat_win32/: getopt.c
Image Processing/motion_detection/: CMakeLists.txt  readme.txt
Image Processing/motion_detection/inc/: API.h  vibe-background-sequential.h
Image Processing/motion_detection/src/: API.c  vibe-background-sequential.c
Image Processing/motion_detection/testUtil/: main.c
LeetCode/: 0001. Two Sum.cpp  0005. Longest Palindromic Substring.cpp  0005. Longest Palindromic Substring.py  0006. ZigZag Conversion.cpp  0006. ZigZag Conversion.py  0009. Palindrome Number.cpp  0015. 3Sum.cpp  0016. 3Sum Closest.cpp  0018. 4Sum.cpp  0028. Implement strStr().cpp  003. Longest Substring Without Repeating Characters.cpp  0039. Combination Sum.cpp  0039. Combination Sum.py  0040. Combination Sum II.cpp  0044. Wildcard Matching.cpp  0050. Pow(x, n).py  0070. 爬楼梯.py  0078. 子集.py  0084. Largest Rectangle in Histogram.cpp  0090. 子集 II.py  0093. Restore IP Addresses.cpp  0100. Same Tree.cpp  0101. Symmetric Tree.cpp  0146. LRU Cache.cpp  0146. LRU 缓存机制.py  0216. Combination Sum III.cpp  0221. Maximal Square.cpp  0223. Rectangle Area.cpp  025. Reverse Nodes in k-Group.cpp  0263. Ugly Number.cpp  0264. Ugly Number II.cpp  0289. 生命游戏.cpp  0289. 生命游戏.py  0300. Longest Increasing Subsequence.cpp  0313. Super Ugly Number.cpp  032. Longest Valid Parentheses.cpp  0377. Combination Sum IV.cpp  0393. UTF-8 Validation.cpp  0406. 根据身高重建队列.py  042. Trapping Rain Water.cpp  (+88 more)
Linux/: Linux.vcxproj  Linux.vcxproj.filters  fork函数考题.cpp
Mathematics/: Mathematics.vcxproj  Mathematics.vcxproj.filters  least Square Sum.cpp  levmarq.cpp  levmarq.h  lm.m  (+4 more)
Operation System/ZThread-2.3.2/: BUILDING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  TODO  aclocal.m4  configure  configure.ac  mkinstalldirs
Operation System/ZThread-2.3.2/doc/: bugs.js  contact.html  cvs.html  documentation.html  download.html  footer.html  header.html  index.html  zthread.css  zthread.doxygen
Operation System/ZThread-2.3.2/include/zthread/: .Barrier.h.swp  Barrier.h.orig
Operation System/ZThread-2.3.2/share/: atomic-gcc.m4  atomic-linux.m4  ftime.m4  pthread.m4  zthread-config  zthread-config.in  zthread.m4  zthread.spec  zthread.spec.in
Operation System/ZThread-2.3.2/src/win32/: threadops.cxx
(+671 files in other folders)
